--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/fauna-adapter": "^1.0.4",
+    "@sendgrid/mail": "^7.7.0",
+    "faunadb": "^4.6.0",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
+    "nodemailer": "^6.7.8",
+    "raw-body": "^2.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -17,8 +23,11 @@
     "@types/node": "18.7.9",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
